// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnauthorizedAccess component should apply custom styles 1`] = `
<div
  class="pf-v6-c-empty-state something"
  data-ouia-component-id="UnauthorizedAccess"
>
  <div
    class="pf-v6-c-empty-state__content"
  >
    <div
      class="pf-v6-c-empty-state__header"
    >
      <div
        class="pf-v6-c-empty-state__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 448 512"
          >
            <path
              d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M24.5 12H23V8c0-3.86-3.14-7-7-7S9 4.14 9 8v4H7.5c-.827 0-1.5.673-1.5 1.5v15c0 .827.673 1.5 1.5 1.5h17c.827 0 1.5-.673 1.5-1.5v-15c0-.827-.673-1.5-1.5-1.5ZM11 8c0-2.757 2.243-5 5-5s5 2.243 5 5v4H11V8Zm13 20H8V14h16v14Zm-6.5-7c0 .52-.265.978-.667 1.247l-.004.003a1.938 1.938 0 0 1-.203.109c-.015.007-.029.017-.044.024l-.013.007c-.039.013-.082.023-.122.035a1.47 1.47 0 0 1-.447.076c-.057 0-.111-.011-.167-.017-.043-.005-.087-.005-.129-.013a1.499 1.499 0 0 1-1.204-1.47c0-.035.008-.07.011-.105.035-.492.302-.917.697-1.164.024-.015.05-.027.075-.041.074-.04.15-.075.231-.103.033-.011.065-.022.098-.031a1.52 1.52 0 0 1 .235-.042c.036-.004.071-.01.107-.011.016 0 .03-.005.046-.005.293 0 .564.087.795.232.011.007.024.011.035.017l.005.004c.388.261.645.699.661 1.198 0 .016.005.032.005.048Z"
            />
          </svg>
        </svg>
      </div>
      <div
        class="pf-v6-c-empty-state__title"
      >
        <h5
          class="pf-v6-c-empty-state__title-text"
        >
          You do not have access to Foo
        </h5>
      </div>
    </div>
    <div
      class="pf-v6-c-empty-state__body"
      data-ouia-component-id="UnauthorizedAccess-body"
    >
      Contact your system administrator(s) for more information.
    </div>
    <div
      class="pf-v6-c-empty-state__footer"
      data-ouia-component-id="UnauthorizedAccess-footer"
    >
      <a
        class="pf-v6-c-button pf-m-primary"
        data-ouia-component-id="UnauthorizedAccess-home-button"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        href="."
      >
        <span
          class="pf-v6-c-button__text"
        >
          Go to landing page
        </span>
      </a>
      <div
        class="pf-v6-c-empty-state__actions"
      />
    </div>
  </div>
</div>
`;

exports[`UnauthorizedAccess component should not show buttons 1`] = `
<div
  class="pf-v6-c-empty-state"
  data-ouia-component-id="UnauthorizedAccess"
>
  <div
    class="pf-v6-c-empty-state__content"
  >
    <div
      class="pf-v6-c-empty-state__header"
    >
      <div
        class="pf-v6-c-empty-state__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 448 512"
          >
            <path
              d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M24.5 12H23V8c0-3.86-3.14-7-7-7S9 4.14 9 8v4H7.5c-.827 0-1.5.673-1.5 1.5v15c0 .827.673 1.5 1.5 1.5h17c.827 0 1.5-.673 1.5-1.5v-15c0-.827-.673-1.5-1.5-1.5ZM11 8c0-2.757 2.243-5 5-5s5 2.243 5 5v4H11V8Zm13 20H8V14h16v14Zm-6.5-7c0 .52-.265.978-.667 1.247l-.004.003a1.938 1.938 0 0 1-.203.109c-.015.007-.029.017-.044.024l-.013.007c-.039.013-.082.023-.122.035a1.47 1.47 0 0 1-.447.076c-.057 0-.111-.011-.167-.017-.043-.005-.087-.005-.129-.013a1.499 1.499 0 0 1-1.204-1.47c0-.035.008-.07.011-.105.035-.492.302-.917.697-1.164.024-.015.05-.027.075-.041.074-.04.15-.075.231-.103.033-.011.065-.022.098-.031a1.52 1.52 0 0 1 .235-.042c.036-.004.071-.01.107-.011.016 0 .03-.005.046-.005.293 0 .564.087.795.232.011.007.024.011.035.017l.005.004c.388.261.645.699.661 1.198 0 .016.005.032.005.048Z"
            />
          </svg>
        </svg>
      </div>
      <div
        class="pf-v6-c-empty-state__title"
      >
        <h5
          class="pf-v6-c-empty-state__title-text"
        >
          You do not have access to Foo
        </h5>
      </div>
    </div>
    <div
      class="pf-v6-c-empty-state__body"
      data-ouia-component-id="UnauthorizedAccess-body"
    >
      Contact your system administrator(s) for more information.
    </div>
    <div
      class="pf-v6-c-empty-state__footer"
      data-ouia-component-id="UnauthorizedAccess-footer"
    >
      <div
        class="pf-v6-c-empty-state__actions"
      />
    </div>
  </div>
</div>
`;

exports[`UnauthorizedAccess component should render 1`] = `
<div
  class="pf-v6-c-empty-state"
  data-ouia-component-id="UnauthorizedAccess"
>
  <div
    class="pf-v6-c-empty-state__content"
  >
    <div
      class="pf-v6-c-empty-state__header"
    >
      <div
        class="pf-v6-c-empty-state__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 448 512"
          >
            <path
              d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M24.5 12H23V8c0-3.86-3.14-7-7-7S9 4.14 9 8v4H7.5c-.827 0-1.5.673-1.5 1.5v15c0 .827.673 1.5 1.5 1.5h17c.827 0 1.5-.673 1.5-1.5v-15c0-.827-.673-1.5-1.5-1.5ZM11 8c0-2.757 2.243-5 5-5s5 2.243 5 5v4H11V8Zm13 20H8V14h16v14Zm-6.5-7c0 .52-.265.978-.667 1.247l-.004.003a1.938 1.938 0 0 1-.203.109c-.015.007-.029.017-.044.024l-.013.007c-.039.013-.082.023-.122.035a1.47 1.47 0 0 1-.447.076c-.057 0-.111-.011-.167-.017-.043-.005-.087-.005-.129-.013a1.499 1.499 0 0 1-1.204-1.47c0-.035.008-.07.011-.105.035-.492.302-.917.697-1.164.024-.015.05-.027.075-.041.074-.04.15-.075.231-.103.033-.011.065-.022.098-.031a1.52 1.52 0 0 1 .235-.042c.036-.004.071-.01.107-.011.016 0 .03-.005.046-.005.293 0 .564.087.795.232.011.007.024.011.035.017l.005.004c.388.261.645.699.661 1.198 0 .016.005.032.005.048Z"
            />
          </svg>
        </svg>
      </div>
      <div
        class="pf-v6-c-empty-state__title"
      >
        <h5
          class="pf-v6-c-empty-state__title-text"
        >
          You do not have access to Foo
        </h5>
      </div>
    </div>
    <div
      class="pf-v6-c-empty-state__body"
      data-ouia-component-id="UnauthorizedAccess-body"
    >
      Contact your system administrator(s) for more information.
    </div>
    <div
      class="pf-v6-c-empty-state__footer"
      data-ouia-component-id="UnauthorizedAccess-footer"
    >
      <a
        class="pf-v6-c-button pf-m-primary"
        data-ouia-component-id="UnauthorizedAccess-home-button"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        href="."
      >
        <span
          class="pf-v6-c-button__text"
        >
          Go to landing page
        </span>
      </a>
      <div
        class="pf-v6-c-empty-state__actions"
      />
    </div>
  </div>
</div>
`;

exports[`UnauthorizedAccess component should show custom actions 1`] = `
<div
  class="pf-v6-c-empty-state"
  data-ouia-component-id="UnauthorizedAccess"
>
  <div
    class="pf-v6-c-empty-state__content"
  >
    <div
      class="pf-v6-c-empty-state__header"
    >
      <div
        class="pf-v6-c-empty-state__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 448 512"
          >
            <path
              d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M24.5 12H23V8c0-3.86-3.14-7-7-7S9 4.14 9 8v4H7.5c-.827 0-1.5.673-1.5 1.5v15c0 .827.673 1.5 1.5 1.5h17c.827 0 1.5-.673 1.5-1.5v-15c0-.827-.673-1.5-1.5-1.5ZM11 8c0-2.757 2.243-5 5-5s5 2.243 5 5v4H11V8Zm13 20H8V14h16v14Zm-6.5-7c0 .52-.265.978-.667 1.247l-.004.003a1.938 1.938 0 0 1-.203.109c-.015.007-.029.017-.044.024l-.013.007c-.039.013-.082.023-.122.035a1.47 1.47 0 0 1-.447.076c-.057 0-.111-.011-.167-.017-.043-.005-.087-.005-.129-.013a1.499 1.499 0 0 1-1.204-1.47c0-.035.008-.07.011-.105.035-.492.302-.917.697-1.164.024-.015.05-.027.075-.041.074-.04.15-.075.231-.103.033-.011.065-.022.098-.031a1.52 1.52 0 0 1 .235-.042c.036-.004.071-.01.107-.011.016 0 .03-.005.046-.005.293 0 .564.087.795.232.011.007.024.011.035.017l.005.004c.388.261.645.699.661 1.198 0 .016.005.032.005.048Z"
            />
          </svg>
        </svg>
      </div>
      <div
        class="pf-v6-c-empty-state__title"
      >
        <h5
          class="pf-v6-c-empty-state__title-text"
        >
          You do not have access to Foo
        </h5>
      </div>
    </div>
    <div
      class="pf-v6-c-empty-state__body"
      data-ouia-component-id="UnauthorizedAccess-body"
    >
      Contact your system administrator(s) for more information.
    </div>
    <div
      class="pf-v6-c-empty-state__footer"
      data-ouia-component-id="UnauthorizedAccess-footer"
    >
      <div
        class="pf-v6-c-empty-state__actions"
      >
        <button
          id="action-one"
        >
          1
        </button>
      </div>
      <div
        class="pf-v6-c-empty-state__actions"
      >
        <div
          class="pf-v6-c-empty-state__actions"
        >
          <button
            id="action-one"
          >
            2
          </button>
          <button
            id="action-one"
          >
            3
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UnauthorizedAccess component should show custom body text 1`] = `
<div
  class="pf-v6-c-empty-state"
  data-ouia-component-id="UnauthorizedAccess"
>
  <div
    class="pf-v6-c-empty-state__content"
  >
    <div
      class="pf-v6-c-empty-state__header"
    >
      <div
        class="pf-v6-c-empty-state__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 448 512"
          >
            <path
              d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M24.5 12H23V8c0-3.86-3.14-7-7-7S9 4.14 9 8v4H7.5c-.827 0-1.5.673-1.5 1.5v15c0 .827.673 1.5 1.5 1.5h17c.827 0 1.5-.673 1.5-1.5v-15c0-.827-.673-1.5-1.5-1.5ZM11 8c0-2.757 2.243-5 5-5s5 2.243 5 5v4H11V8Zm13 20H8V14h16v14Zm-6.5-7c0 .52-.265.978-.667 1.247l-.004.003a1.938 1.938 0 0 1-.203.109c-.015.007-.029.017-.044.024l-.013.007c-.039.013-.082.023-.122.035a1.47 1.47 0 0 1-.447.076c-.057 0-.111-.011-.167-.017-.043-.005-.087-.005-.129-.013a1.499 1.499 0 0 1-1.204-1.47c0-.035.008-.07.011-.105.035-.492.302-.917.697-1.164.024-.015.05-.027.075-.041.074-.04.15-.075.231-.103.033-.011.065-.022.098-.031a1.52 1.52 0 0 1 .235-.042c.036-.004.071-.01.107-.011.016 0 .03-.005.046-.005.293 0 .564.087.795.232.011.007.024.011.035.017l.005.004c.388.261.645.699.661 1.198 0 .016.005.032.005.048Z"
            />
          </svg>
        </svg>
      </div>
      <div
        class="pf-v6-c-empty-state__title"
      >
        <h5
          class="pf-v6-c-empty-state__title-text"
        >
          You do not have access to Foo
        </h5>
      </div>
    </div>
    <div
      class="pf-v6-c-empty-state__body"
      data-ouia-component-id="UnauthorizedAccess-body"
    >
      Some text
    </div>
    <div
      class="pf-v6-c-empty-state__footer"
      data-ouia-component-id="UnauthorizedAccess-footer"
    >
      <a
        class="pf-v6-c-button pf-m-primary"
        data-ouia-component-id="UnauthorizedAccess-home-button"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        href="."
      >
        <span
          class="pf-v6-c-button__text"
        >
          Go to landing page
        </span>
      </a>
      <div
        class="pf-v6-c-empty-state__actions"
      />
    </div>
  </div>
</div>
`;

exports[`UnauthorizedAccess component should show custom title 1`] = `
<div
  class="pf-v6-c-empty-state"
  data-ouia-component-id="UnauthorizedAccess"
>
  <div
    class="pf-v6-c-empty-state__content"
  >
    <div
      class="pf-v6-c-empty-state__header"
    >
      <div
        class="pf-v6-c-empty-state__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 448 512"
          >
            <path
              d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M24.5 12H23V8c0-3.86-3.14-7-7-7S9 4.14 9 8v4H7.5c-.827 0-1.5.673-1.5 1.5v15c0 .827.673 1.5 1.5 1.5h17c.827 0 1.5-.673 1.5-1.5v-15c0-.827-.673-1.5-1.5-1.5ZM11 8c0-2.757 2.243-5 5-5s5 2.243 5 5v4H11V8Zm13 20H8V14h16v14Zm-6.5-7c0 .52-.265.978-.667 1.247l-.004.003a1.938 1.938 0 0 1-.203.109c-.015.007-.029.017-.044.024l-.013.007c-.039.013-.082.023-.122.035a1.47 1.47 0 0 1-.447.076c-.057 0-.111-.011-.167-.017-.043-.005-.087-.005-.129-.013a1.499 1.499 0 0 1-1.204-1.47c0-.035.008-.07.011-.105.035-.492.302-.917.697-1.164.024-.015.05-.027.075-.041.074-.04.15-.075.231-.103.033-.011.065-.022.098-.031a1.52 1.52 0 0 1 .235-.042c.036-.004.071-.01.107-.011.016 0 .03-.005.046-.005.293 0 .564.087.795.232.011.007.024.011.035.017l.005.004c.388.261.645.699.661 1.198 0 .016.005.032.005.048Z"
            />
          </svg>
        </svg>
      </div>
      <div
        class="pf-v6-c-empty-state__title"
      >
        <h5
          class="pf-v6-c-empty-state__title-text"
        >
          Custom title
        </h5>
      </div>
    </div>
    <div
      class="pf-v6-c-empty-state__body"
      data-ouia-component-id="UnauthorizedAccess-body"
    >
      Contact your system administrator(s) for more information.
    </div>
    <div
      class="pf-v6-c-empty-state__footer"
      data-ouia-component-id="UnauthorizedAccess-footer"
    >
      <a
        class="pf-v6-c-button pf-m-primary"
        data-ouia-component-id="UnauthorizedAccess-home-button"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        href="."
      >
        <span
          class="pf-v6-c-button__text"
        >
          Go to landing page
        </span>
      </a>
      <div
        class="pf-v6-c-empty-state__actions"
      />
    </div>
  </div>
</div>
`;

exports[`UnauthorizedAccess component should use custom icon 1`] = `
<div
  class="pf-v6-c-empty-state"
  data-ouia-component-id="UnauthorizedAccess"
>
  <div
    class="pf-v6-c-empty-state__content"
  >
    <div
      class="pf-v6-c-empty-state__header"
    >
      <div
        class="pf-v6-c-empty-state__icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          width="1em"
        >
          <svg
            class="pf-v6-icon-default"
            viewBox="0 0 512 512"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
            />
          </svg>
          <svg
            class="pf-v6-icon-rh-ui"
            viewBox="0 0 32 32"
          >
            <path
              d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm0 26.014a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 27.014Zm1.25-9.914V19a1.25 1.25 0 0 1-2.5 0v-3c0-.69.56-1.25 1.25-1.25 1.517 0 2.75-1.233 2.75-2.75S17.517 9.25 16 9.25s-2.75 1.233-2.75 2.75a1.25 1.25 0 0 1-2.5 0c0-2.895 2.355-5.25 5.25-5.25s5.25 2.355 5.25 5.25a5.26 5.26 0 0 1-4 5.1Z"
            />
          </svg>
        </svg>
      </div>
      <div
        class="pf-v6-c-empty-state__title"
      >
        <h5
          class="pf-v6-c-empty-state__title-text"
        >
          You do not have access to Foo
        </h5>
      </div>
    </div>
    <div
      class="pf-v6-c-empty-state__body"
      data-ouia-component-id="UnauthorizedAccess-body"
    >
      Contact your system administrator(s) for more information.
    </div>
    <div
      class="pf-v6-c-empty-state__footer"
      data-ouia-component-id="UnauthorizedAccess-footer"
    >
      <a
        class="pf-v6-c-button pf-m-primary"
        data-ouia-component-id="UnauthorizedAccess-home-button"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        href="."
      >
        <span
          class="pf-v6-c-button__text"
        >
          Go to landing page
        </span>
      </a>
      <div
        class="pf-v6-c-empty-state__actions"
      />
    </div>
  </div>
</div>
`;
